# ci-cd-workflow

./: .mergify.yml  .release-please-manifest.json  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/: renovate.json5
.github/workflows/: cd.yml  ci.yml
src/ci_cd_workflow/: __about__.py
